refactor: Drop Lombok (#86)