@@ -6,40 +6,39 @@ import io.github.robertograham.departureapi.client.dto.NextBuses;
 import io.github.robertograham.departureapi.client.dto.Type;
 import io.github.robertograham.departureapi.response.BusStop;
 import io.github.robertograham.departureapi.response.Departure;
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 final class BusStopServiceImpl implements BusStopService {
 
-    @NonNull
     private final TransportApiClient transportApiClient;
+
+    public BusStopServiceImpl(final TransportApiClient transportApiClient) {
+        this.transportApiClient = Objects.requireNonNull(transportApiClient, "transportApiClient cannot be null");
+    }
 
     @Override
     public List<BusStop> getNearbyBusStops(final BigDecimal longitude, final BigDecimal latitude) {
         return transportApiClient.places(latitude, longitude, null, null, null, null, null, Type.BUS_STOP)
-            .getMembers().stream()
+            .members().stream()
             .filter(Objects::nonNull)
-            .filter((final var member) -> Type.BUS_STOP == member.getType())
+            .filter((final var member) -> Type.BUS_STOP == member.type())
             .map(BusStopHelper::createBusStop)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     public Optional<BusStop> getBusStop(final String busStopId) {
         return transportApiClient.places(null, null, null, null, null, null, busStopId, Type.BUS_STOP)
-            .getMembers().stream()
+            .members().stream()
             .filter(Objects::nonNull)
-            .filter((final var member) -> Type.BUS_STOP == member.getType())
-            .filter((final var member) -> busStopId.equals(member.getAtcoCode()))
+            .filter((final var member) -> Type.BUS_STOP == member.type())
+            .filter((final var member) -> busStopId.equals(member.atcoCode()))
             .findFirst()
             .map(BusStopHelper::createBusStop);
     }
@@ -47,12 +46,12 @@ final class BusStopServiceImpl implements BusStopService {
     @Override
     public List<Departure> getDepartures(final String busStopId) {
         return transportApiClient.busStopDepartures(busStopId, Group.NO, 300, NextBuses.NO)
-            .getDepartures()
+            .departures()
             .values().stream()
             .filter(Objects::nonNull)
             .flatMap(List::stream)
             .filter(Objects::nonNull)
             .map(DepartureHelper::createDeparture)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
